syntax.txt
(Assumes first column to be primary key)
(ONLY INT AND STRING ARE SUPPORTED)

CREATE DATABASE : CREATE NEW DATABASE <DB_NAME>

USING DATABASE  : USE <DB_NAME>

CREATE TABLE    : CREATE NEW TABLE <TABLE_NAME> (INT ID,STRING NAME,....) 

INSERT          : INSERT INTO <TABLE_NAME> VALUES (VAL1,VAL2,...)

SELECT          : SELECT FROM <TABLE_NAME> WHERE (<CONDITION>)

UPDATE          : UPDATE <TABLE_NAME> SET (COL1=VAL1,COL2=VAL2,...) WHERE (<CONDITION>)

DELETE          : DELETE FROM <TABLE_NAME> WHERE (<CONDITION>)

EXIT            : EXIT
